# rust-web-appliance

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  version.json
.cargo/: config.toml
.claude/agents/: backend.md  designer.md  dev-ops.md  frontend.md  kernel.md  qa.md  security.md  storage.md  team-leader.md
admin_keys/: README  admin_pub.pem
admin_ui/: admin.html
backend/: endpoints.json  ports.json
certs/: README  dev-cert.pem  dev-key.pem
data/tls/: README
docs/: README.md  plan.odt  v1.0.0_brian-horton_feat_version_control_claude_agents.txt  v1.0.1_brian-horton_fix_qemu_slirp_networking_and_readme_quick_guide.txt  v1.1.0_brian-horton_feat_added_TLS_HTTPS_and_API_key_authentication.txt  v1.1.1_brian-horton_fix_QEMU_port_forwarding_for_HTTPS.txt  v1.1.2_brian-horton_fix_reliable_TLS_response_delivery.txt  v1.1.3_brian-horton_docs_TLS_certificate_placement_and_Cloudflare_SSL_setup.txt  v1.1.4_brian-horton_docs_README_files_for_certs_and_data_tls_directories.txt  v1.1.5_brian-horton_build_TLS_certs_included_in_disk_image.txt  v1.2.0_brian-horton_feat_admin_console_with_Ed25519_key_authentication.txt  v1.2.1_brian-horton_fix_chunked_response_for_large_pages.txt  v1.2.2_brian-horton_feat_embedded_keypair_one-click_admin_login.txt  v1.3.0_brian-horton_feat_multi-port_support_with_vhost_admin_panel.txt  v1.3.1_brian-horton_fix_qemu_port_8080_conflict.txt  v1.3.2_brian-horton_fix_replaced_reboot_with_restart_in_admin_UI.txt  v1.3.3_brian-horton_fix_port_config_persistence_via_storage_layer.txt  v1.3.4_brian-horton_fix_embed_ports_config_into_binary.txt  v1.4.0_brian-horton_feat_vhost_host_header_enforcement.txt  v1.5.0_brian-horton_feat_smtp_email_service.txt
frontend/: index.html
frontend/css/: style.css
frontend/js/: app.js
scripts/: build.sh  gen-admin-keys.sh  gen-cert.sh  make-image.sh  run-qemu.sh
src/: http.rs  main.rs  ports.rs  router.rs  security.rs  server.rs  smtp.rs  static_files.rs  storage.rs  tls.rs
src/admin/: auth.rs  dashboard.rs  endpoints.rs  kv_browser.rs  logs.rs  mod.rs  ports_manager.rs  security_manager.rs  session.rs  smtp_manager.rs  tls_manager.rs  ui.rs
src/api/: config_engine.rs  context.rs  example.rs  kv.rs  mod.rs  system.rs
