[package]
name = "rust-web-appliance"
version = "1.3.1"
edition = "2024"
description = "All-Rust unikernel web server appliance on HermitOS"

[profile.dev]
opt-level = 1       # hermit requires at least opt-level 1

[profile.release]
opt-level = 3
lto = false
strip = "symbols"

# ── HermitOS kernel linkage ──────────────────────────────────────────
# The `hermit` crate IS the kernel. Linking it registers the allocator,
# panic handler, and all virtio drivers before main() runs.
[target.'cfg(target_os = "hermit")'.dependencies]
hermit = { git = "https://github.com/hermit-os/hermit-rs.git", tag = "hermit-0.13.0", default-features = false, features = [
    "pci",          # PCI bus enumeration (finds virtio devices)
    "tcp",          # smoltcp TCP/IP stack inside the kernel
    "dhcpv4",       # DHCP lease on boot via virtio-net
    "rtl8139",      # RTL8139 NIC driver — required for QEMU user-mode (SLIRP) networking
    "virtio-fs",    # VirtioFS for host-shared filesystem
] }

# ── Application dependencies ────────────────────────────────────────
# All crates must be pure Rust — no C FFI, no mmap, no async runtimes.
[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
httparse = "1"                      # Pure-Rust HTTP/1.1 parser (replaces tiny_http)
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "logging"] }
rustls-pemfile = "2"                # Pure-Rust PEM certificate loader
rustls-rustcrypto = "0.0.2-alpha"   # Pure-Rust crypto provider (hermit-compatible)
ed25519-dalek = { version = "2", default-features = false, features = ["std"] }  # Ed25519 admin auth (already in tree via rustls-rustcrypto)
sha2 = "0.10"                       # SHA-256 for challenge hashing (already in tree)
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }  # Random challenge/token generation (already in tree)
